fix(container): respect fluid on mobile and removed unnecessary !important

--- a/src/definitions/elements/container.less
+++ b/src/definitions/elements/container.less
@@ -24,78 +24,78 @@
 /* All Sizes */
 .ui.container {
   display: block;
-  max-width: @maxWidth !important;
+  max-width: @maxWidth;
 }
 
 /* Mobile */
 @media only screen and (max-width: @largestMobileScreen) {
-  .ui.container {
-    width: @mobileWidth !important;
-    margin-left: @mobileGutter !important;
-    margin-right: @mobileGutter !important;
+  .ui.container:not(.fluid) {
+    width: @mobileWidth;
+    margin-left: @mobileGutter;
+    margin-right: @mobileGutter;
   }
   .ui.grid.container {
-    width: @mobileGridWidth !important;
+    width: @mobileGridWidth;
   }
   .ui.relaxed.grid.container {
-    width: @mobileRelaxedGridWidth !important;
+    width: @mobileRelaxedGridWidth;
   }
   .ui.very.relaxed.grid.container {
-    width: @mobileVeryRelaxedGridWidth !important;
+    width: @mobileVeryRelaxedGridWidth;
   }
 }
 
 /* Tablet */
 @media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestTabletScreen) {
-  .ui.container {
+  .ui.container:not(.fluid) {
     width: @tabletWidth;
-    margin-left: @tabletGutter !important;
-    margin-right: @tabletGutter !important;
+    margin-left: @tabletGutter;
+    margin-right: @tabletGutter;
   }
   .ui.grid.container {
-    width: @tabletGridWidth !important;
+    width: @tabletGridWidth;
   }
   .ui.relaxed.grid.container {
-    width: @tabletRelaxedGridWidth !important;
+    width: @tabletRelaxedGridWidth;
   }
   .ui.very.relaxed.grid.container {
-    width: @tabletVeryRelaxedGridWidth !important;
+    width: @tabletVeryRelaxedGridWidth;
   }
 }
 
 /* Small Monitor */
 @media only screen and (min-width: @computerBreakpoint) and (max-width: @largestSmallMonitor) {
-  .ui.container {
+  .ui.container:not(.fluid) {
     width: @computerWidth;
-    margin-left: @computerGutter !important;
-    margin-right: @computerGutter !important;
+    margin-left: @computerGutter;
+    margin-right: @computerGutter;
   }
   .ui.grid.container {
-    width: @computerGridWidth !important;
+    width: @computerGridWidth;
   }
   .ui.relaxed.grid.container {
-    width: @computerRelaxedGridWidth !important;
+    width: @computerRelaxedGridWidth;
   }
   .ui.very.relaxed.grid.container {
-    width: @computerVeryRelaxedGridWidth !important;
+    width: @computerVeryRelaxedGridWidth;
   }
 }
 
 /* Large Monitor */
 @media only screen and (min-width: @largeMonitorBreakpoint) {
-  .ui.container {
+  .ui.container:not(.fluid) {
     width: @largeMonitorWidth;
-    margin-left: @largeMonitorGutter !important;
-    margin-right: @largeMonitorGutter !important;
+    margin-left: @largeMonitorGutter;
+    margin-right: @largeMonitorGutter;
   }
   .ui.grid.container {
-    width: @largeMonitorGridWidth !important;
+    width: @largeMonitorGridWidth;
   }
   .ui.relaxed.grid.container {
-    width: @largeMonitorRelaxedGridWidth !important;
+    width: @largeMonitorRelaxedGridWidth;
   }
   .ui.very.relaxed.grid.container {
-    width: @largeMonitorVeryRelaxedGridWidth !important;
+    width: @largeMonitorVeryRelaxedGridWidth;
   }
 }
 
@@ -107,7 +107,7 @@
 /* Text Container */
 .ui.text.container {
   font-family: @textFontFamily;
-  max-width: @textWidth !important;
+  max-width: @textWidth;
   line-height: @textLineHeight;
   font-size: @textSize;
 }
